--- a/templates/admin/database.html
+++ b/templates/admin/database.html
@@ -6,8 +6,8 @@
       <th>State</th>
       <th>District/Seniority</th>
       <th>Twitter</th>
+      <th>FTV Email</th>
       <th>Twitter_FTV</th>
-      <th>Twitter_FTV Email</th>
       <th>Twitter_FTV Password</th>
     </tr>
     {% for p in politicians %}
@@ -16,10 +16,13 @@
         <td>{{ p['chamber'] }}</td>
         <td>{{ p['state'] }}</td>
         <td>{{ p['district'] }}</td>
-        <td>{{ p['twitter'] }}</td>
-        <td>{{ p['twitter_ftv'] }}</td>
-        <td>{{ p['twitter_ftv.email'] }}</td>
-        <td>{{ p['twitter_ftv.email_password'] }}</td>
+        <td>{{ p['twitter_id'] }}</td>
+
+        {% if 'ftv' in p.keys() %}
+          <td>{{ p['ftv']['twitter_handle'] }}</td>
+          <td>{{ p['ftv']['email'] }}</td>
+          <td>{{ p['ftv']['twitter_password'] }}</td>
+        {% end %}
       </tr>
     {% end %}
   </table>
