--- a/templates/public/results.html
+++ b/templates/public/results.html
@@ -8,21 +8,23 @@
 
     </br>
 
-    <div class="row-fluid">
-      {% for rep in results %}
-        <div class="span4">
-          <img class="img-polaroid" src="{{ static_url(rep['portrait_path'])}}">
-          <h4> Rep. {{ rep['first_name'] }} {{ rep['last_name'] }} ({{ rep['party']}})</h4>
-          
-          {% if rep['twitter_id'] %}
-          <a href="https://twitter.com/{{ rep['twitter_id'] }}" class="twitter-follow-button" data-show-count="false" data-lang="en" data-size="large">Follow @{{ rep['twitter_id'] }} </a>
-          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-          {% else %}
-          <h5>No Twitter account?!</h5>
-          {% end %}
-        </div>
-      {% end %}
-    </div> <!-- row-fluid -->
+      <div class="row-fluid">
+        {% for rep in results %}
+          <div class="span4">
+            <img class="img-polaroid" src="{{ static_url(rep['portrait_path'])}}">
+            <h4> Rep. {{ rep['first_name'] }} {{ rep['last_name'] }} ({{ rep['party']}})</h4>
+            
+            {% if rep['twitter_id'] %}
+            <a href="https://twitter.com/{{ rep['twitter_id'] }}" class="twitter-follow-button" data-show-count="false" data-lang="en" data-size="large">Follow @{{ rep['twitter_id'] }} </a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+            {% else %}
+            <h5>No Twitter account?!</h5>
+            {% end %}
+          </div>
+        {% end %}
+      </div> <!-- row-fluid -->
+    </div> <!-- jumbotron -->
+
 {% end %}
 
 
