--- a/templates/admin/votes.html
+++ b/templates/admin/votes.html
@@ -13,18 +13,21 @@
     <ul>
     {% for vote in votes %}
       <li>
-        <a href="{{ vote.url }}" target="_blank">{{ vote.question }}</a></br>
-        Roll ID: {{ vote.roll_id }}</br>
-        Bill ID: {{ vote.bill_id }}</br>
-        Chamber: {{ vote.chamber|capfirst }}</br>
-        Voted at: {{ vote.voted_at }}</br>
-        Result: {{ vote.result }}</br>
+        <a href="{{ vote['url'] }}" target="_blank">{{ vote['question'] }}</a></br>
+        Roll ID: {{ vote['roll_id'] }}</br>
+        
+        {% if 'bill_id' in vote.keys() %}
+          Bill ID: {{ vote['bill_id'] }}</br>
+        {% end %}
+        Chamber: {{ vote['chamber'].capitalize() }}</br>
+        Voted at: {{ vote['voted_at'] }}</br>
+        Result: {{ vote['result'] }}</br>
         
         <!-- Inputs pass on vote info to tweet page -->
         <form method="GET" action="../tweet">
-          {% for k, v in vote.items %}
+          {% for k, v in vote.iteritems() %}
             <input type="hidden" name="{{ k }}" value="{{ v }}">
-          {% endfor %}
+          {% end %}
           <button type="submit" class="btn btn-primary">Tweet</button>
         </form>
       </li>
@@ -35,12 +38,16 @@
   </br>
 
   {% if form %}
-    <form method="post" action="">{% csrf_token %}
-      {% if form %}
-        {{ form.as_table }} 
+    <form method="post" action="">
+        <label>Chamber</label>
+        <select name=​"chamber">​
+          <option value selected=​"selected">​---​</option>​
+          <option value="senate">​Senate</option>​
+          <option value=​"house">​House</option>​
+        </select>
+
         </br>
         <button type="submit" class="btn btn-primary">Search</button>
-      {% end %}
     </form>
   {% end %}
 
