--- a/templates/admin/votes.html
+++ b/templates/admin/votes.html
@@ -24,7 +24,7 @@
         Result: {{ vote['result'] }}</br>
         
         <!-- Inputs pass on vote info to tweet page -->
-        <form method="GET" action="../tweet">
+        <form method="GET" action="tweet">
           {% for k, v in vote.iteritems() %}
             <input type="hidden" name="{{ k }}" value="{{ v }}">
           {% end %}
