--- a/templates/admin/tweet.html
+++ b/templates/admin/tweet.html
@@ -17,7 +17,7 @@
     </div>
     <form method="post" action="">
       <div class="fieldWrapper">
-          <textarea name="text" id="id_text" placeholder="{{ form['text'] }}" rows="4" class="field span8"></textarea>
+          <textarea name="tweet_text" id="id_tweet_text" placeholder="{{ form['tweet_text'] }}" rows="4" class="field span8"></textarea>
       </div>
       <span id="tweet_counter"></span>
       </br>
@@ -41,7 +41,7 @@
     $(document).ready(function() {  
       // Track changes in tweet text box
       tweet_counter();
-      $('#id_text').on('input', function () {
+      $('#id_tweet_text').on('input', function () {
         tweet_counter();
       });
 
@@ -50,7 +50,7 @@
     function tweet_counter() {
       max_length = 140;
       tweet_beginning = $("#tweet_beginning")
-      tweet_input = $('#id_text').val();
+      tweet_input = $('#id_tweet_text').val();
       tweet = tweet_beginning + tweet_input
       char_remaining = max_length - tweet.length;
       $('#tweet_counter').text(char_remaining + " characters left");
