fixed user redirect on log-in

--- a/templates/admin/tweet.html
+++ b/templates/admin/tweet.html
@@ -17,7 +17,7 @@
     </div>
     <form method="post" action="">
       <div class="fieldWrapper">
-          <textarea name="tweet_text" id="id_tweet_text" placeholder="{{ form['tweet_text'] }}" rows="4" class="field span8"></textarea>
+          <textarea name="tweet_text" id="id_tweet_text" rows="4" class="field span8">{{ form['tweet_text'] }}</textarea>
       </div>
       <span id="tweet_counter"></span>
       </br>
