--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
           <li class="active"><a href="#">Home</a></li>
           <li><a href="mailto:admin@followthevote.org">Contact</a></li>
           {% if current_user in settings.get('staff')%}
-            <li><a href="/admin">Admin</a></li>
+            <li><a href="/admin">Admin for @{{ current_user }}</a></li>
           {% end %}
         </ul>
         <h3 class="muted">FollowTheVote.org</h3>
