--- a/templates/admin/votes.html
+++ b/templates/admin/votes.html
@@ -39,16 +39,12 @@
 
   {% if form %}
     <form method="POST" action="">
-      <input type="text" name="test">
-
-
       <label>Chamber</label>
-      <select name=​"chamber">​
-        <option>​---​</option>​
-        <option value="senate">​Senate</option>​
-        <option value=​"house">​House</option>​
+      <select name="chamber">
+        <option>---</option>
+        <option value="senate">Senate</option>
+        <option value="house">House</option>
       </select>
-
       </br>
       <button type="submit" class="btn btn-primary">Search</button>
     </form>
