--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -24,8 +24,9 @@
 	<h4>Recent Tweets</h4>
 
 	{% for t in tweets %}
-		{{ t['admin'] }} ({{ t['datetime'] }}): </br>
-		{{ t['tweet_template'] }}
+		@{{ t['admin'] }} for {{ len(t['tweeted']) }} FTV accounts ({{ t['datetime'].date() }}):
+		</br>
+		"{{ t['tweet_template'] }}"
 	{% end %}
 
 {% end %}
