wrote bought accounts in excel to mdb collection

--- a/templates/admin/database.html
+++ b/templates/admin/database.html
@@ -21,7 +21,7 @@
         {% if 'ftv' in p.keys() %}
           <td>{{ p['ftv']['twitter'] }}</td>
           <td>{{ p['ftv']['email'] }}</td>
-          <td>{{ p['ftv']['password'] }}</td>
+          <td>{{ p['ftv']['email_password'] }}</td>
         {% end %}
       </tr>
     {% end %}
