--- a/templates/admin/database.html
+++ b/templates/admin/database.html
@@ -12,17 +12,14 @@
     </tr>
     {% for p in politicians %}
       <tr>
-        <td>{{ p['name'] }}</td>
-        <td>{{ p['chamber'] }}</td>
-        <td>{{ p['state'] }}</td>
-        <td>{{ p['district'] }}</td>
-        <td>{{ p['twitter_id'] }}</td>
-
-        {% if 'ftv' in p.keys() %}
-          <td>{{ p['ftv']['twitter'] }}</td>
-          <td>{{ p['ftv']['email'] }}</td>
-          <td>{{ p['ftv']['email_password'] }}</td>
-        {% end %}
+        <td>{{ p.name() }}</td>
+        <td>{{ p.chamber }}</td>
+        <td>{{ p.state }}</td>
+        <td>{{ p.district }}</td>
+        <td>{{ p.twitter }}</td>
+        <td>{{ p.ftv.twitter }}</td>
+        <td>{{ p.ftv.email }}</td>
+        <td>{{ p.ftv.email_password }}</td>
       </tr>
     {% end %}
   </table>
