--- a/templates/admin/database.html
+++ b/templates/admin/database.html
@@ -7,6 +7,7 @@
       <th>District/Seniority</th>
       <th>Twitter</th>
       <th>Twitter_FTV</th>
+      <th>Twitter_FTV Password</th>
       <th>Email</th>
       <th>Password</th>
     </tr>
@@ -18,6 +19,7 @@
         <td>{{ p.district }}</td>
         <td>{{ p.twitter }}</td>
         <td>{{ p.ftv.twitter }}</td>
+        <td>{{ p.ftv.twitter_password }}</td>
         <td>{{ p.ftv.email }}</td>
         <td>{{ p.ftv.email_password }}</td>
       </tr>
