--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -13,12 +13,17 @@
     {% end %}
 
 	<ul>
-	  <li>
-	    <a href="/admin/votes">Search Votes</a>
-	  </li>
-	  <li>
-	    <a href="/admin/database">FTV Accounts Database</a>
-	  </li>
+		<li>
+	    	<a href="/admin/votes">Search Votes</a>
+	  	</li>
+	  	<li>
+	    	<a href="/admin/database">FTV Accounts Database</a>
+	  	</li>
+	  	<ul>
+	  		<li>
+	    		<a href="/admin/database?show_twitter=true">Just FTV Twitter Accounts</a>
+	  		</li>
+		</ul>
 	</ul>
 
 	<h4>Recent Tweets</h4>
