--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -17,6 +17,10 @@
 	    	<a href="/admin/votes">Search Votes</a>
 	  	</li>
 	  	<li>
+	    	<a href="/admin/tweet_no_votes">Tweet (w/out voting info)</a>
+	  	</li>
+
+	  	<li>
 	    	<a href="/admin/database">FTV Accounts Database</a>
 	  	</li>
 	  	<ul>
