fixed db credentials

--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -17,7 +17,7 @@
 	    	<a href="/admin/votes">Search Votes</a>
 	  	</li>
 	  	<li>
-	    	<a href="/admin/tweet_no_votes">Tweet (w/out voting info)</a>
+	    	<a href="/admin/tweet_no_vote">Tweet (w/out voting info)</a>
 	  	</li>
 
 	  	<li>
