fixing tweet logic

--- a/templates/admin/tweet.html
+++ b/templates/admin/tweet.html
@@ -34,6 +34,9 @@
     Chamber: {{ vote['chamber'].capitalize() }}</br>
     Voted at: {{ vote['voted_at'] }}</br>
     Result: {{ vote['result'] }}</br>
+
+    </br>
+    Or, see the <a href="/admin/database" target="_blank">FTV database</a>
         
   {% end %}
 
