--- a/static/css/twittercongress.css
+++ b/static/css/twittercongress.css
@@ -1,12 +1,12 @@
    body {
         padding-top: 20px;
         padding-bottom: 20px;
-        /*background-image: url('../img/house_body_1414px.jpg');*/
+        background-image: url('../img/house_body_1414px.jpg');
         background-repeat: no-repeat;
         background-position: center top;
       }
 
-      /* Custom container
+      /* Custom container */
       .container-narrow {
         margin: 0px auto;
         max-width: 740px;
@@ -14,7 +14,7 @@
       .container-narrow > hr {
         margin: 30px 0;
       }
-      */
+      
 
       /* Main marketing message */
       .jumbotron {
