--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-narrow">
 
     {% block header %}
       <div class="masthead">
